# CppCellularAutomation

./: .gitignore  .index  CMakeLists.txt  Readme.md  r
include/: Readme.md  automation.hpp
src/: CMakeLists.txt  ReadME.md  automation.cpp  main.cpp
tests/: CMakeLists.txt  Readme.md  test_automation.cpp  test_rang.hpp
